--- a/catebza/package.json
+++ b/catebza/package.json
@@ -2,12 +2,14 @@
   "name": "catebza",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:3001",
+  "homepage": "https://thapza101.github.io/CatebzaTrading",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.0",
@@ -23,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "deploy":"deploy gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
