--- a/catebza/package.json
+++ b/catebza/package.json
@@ -2,7 +2,6 @@
   "name": "catebza",
   "version": "0.1.0",
   "private": true,
- 
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -17,6 +16,7 @@
     "react-medium-image-zoom": "^4.3.1",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.1",
     "react-zoom-carousel": "^1.17.0",
     "styled-components": "^5.2.1",
@@ -26,8 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
