--- a/catebza/package.json
+++ b/catebza/package.json
@@ -22,7 +22,7 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "https://thapza101.github.io/CatebzaTrading",
+  "homepage": "https://mats-ti.github.io/CatebzaTrading",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
